compiler_mod/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expression
Rule 1     expression -> - expression
Rule 2     expression -> expression + expression
Rule 3     expression -> expression - expression
Rule 4     expression -> expression * expression
Rule 5     expression -> expression / expression
Rule 6     expression -> STRUCT { sequence_struct }
Rule 7     expression_list -> expression , expression_list
Rule 8     expression_list -> expression
Rule 9     expression -> NUMBER
Rule 10    expression -> { sequence }
Rule 11    expression -> EXTEND ID { sequence_struct }
Rule 12    expression -> LOCAL ID ASSIGN expression IN expression
Rule 13    expression -> BOOL
Rule 14    expression -> IF expression THEN expression
Rule 15    expression -> IMPORT ID AS ID
Rule 16    dots -> .
Rule 17    dots -> . dots
Rule 18    sequence -> expression
Rule 19    sequence -> sequence ; expression
Rule 20    expression -> FLOAT
Rule 21    expression -> IF expression THEN expression ELSE expression
Rule 22    expression -> IMPORT ID
Rule 23    expression -> expression AND expression
Rule 24    expression -> expression EQ expression
Rule 25    expression -> expression = expression
Rule 26    expression -> expression > expression
Rule 27    expression -> expression < expression
Rule 28    expression -> expression GE expression
Rule 29    expression -> expression LE expression
Rule 30    expression -> expression NEQS expression
Rule 31    expression -> expression OR expression
Rule 32    expression -> expression NAND expression
Rule 33    expression -> LAMBDA_START LAMBDA expression
Rule 34    expression -> LAMBDA_START expression_list LAMBDA expression
Rule 35    expression -> STRING
Rule 36    expression -> ID dots ID
Rule 37    expression -> LOOP expression DO expression
Rule 38    expression -> CHAR
Rule 39    expression -> FOR expression ; expression ; expression DO expression
Rule 40    expression -> ID
Rule 41    expression -> ID dots ID ( )
Rule 42    expression -> ID dots ID ( expression_list )
Rule 43    expression -> WHILE expression DO expression
Rule 44    expression -> ID ( )
Rule 45    expression -> ID ( expression_list )
Rule 46    dots_in_struct_expression -> dots ID
Rule 47    expression -> [ expression_list ]
Rule 48    expression -> ID [ NUMBER ]
Rule 49    expression -> ( expression_list )
Rule 50    expression -> NOT expression
Rule 51    expression -> ID ASSIGN expression
Rule 52    expression -> dots ID ASSIGN expression
Rule 53    seq_assign_expression -> dots ID ASSIGN expression
Rule 54    sequence_struct -> seq_assign_expression
Rule 55    sequence_struct -> sequence_struct ; seq_assign_expression

Terminals, with rules where they appear

(                    : 41 42 44 45 49
)                    : 41 42 44 45 49
*                    : 4
+                    : 2
,                    : 7
-                    : 1 3
.                    : 16 17
/                    : 5
;                    : 19 39 39 55
<                    : 27
=                    : 25
>                    : 26
AND                  : 23
AS                   : 15
ASSIGN               : 12 51 52 53
BOOL                 : 13
CHAR                 : 38
DO                   : 37 39 43
ELSE                 : 21
EQ                   : 24
EXTEND               : 11
FLOAT                : 20
FOR                  : 39
GE                   : 28
ID                   : 11 12 15 15 22 36 36 40 41 41 42 42 44 45 46 48 51 52 53
IF                   : 14 21
IMPORT               : 15 22
IN                   : 12
LAMBDA               : 33 34
LAMBDA_START         : 33 34
LE                   : 29
LOCAL                : 12
LOOP                 : 37
NAND                 : 32
NEQS                 : 30
NOT                  : 50
NUMBER               : 9 48
OR                   : 31
STRING               : 35
STRUCT               : 6
THEN                 : 14 21
WHILE                : 43
[                    : 47 48
]                    : 47 48
error                : 
{                    : 6 10 11
}                    : 6 10 11

Nonterminals, with rules where they appear

dots                 : 17 36 41 42 46 52 53
dots_in_struct_expression : 
expression           : 1 2 2 3 3 4 4 5 5 7 8 12 12 14 14 18 19 21 21 21 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 34 37 37 39 39 39 39 43 43 50 51 52 53 0
expression_list      : 7 34 42 45 47 49
seq_assign_expression : 54 55
sequence             : 10 19
sequence_struct      : 6 11 55

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . - expression
    (2) expression -> . expression + expression
    (3) expression -> . expression - expression
    (4) expression -> . expression * expression
    (5) expression -> . expression / expression
    (6) expression -> . STRUCT { sequence_struct }
    (9) expression -> . NUMBER
    (10) expression -> . { sequence }
    (11) expression -> . EXTEND ID { sequence_struct }
    (12) expression -> . LOCAL ID ASSIGN expression IN expression
    (13) expression -> . BOOL
    (14) expression -> . IF expression THEN expression
    (15) expression -> . IMPORT ID AS ID
    (20) expression -> . FLOAT
    (21) expression -> . IF expression THEN expression ELSE expression
    (22) expression -> . IMPORT ID
    (23) expression -> . expression AND expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression = expression
    (26) expression -> . expression > expression
    (27) expression -> . expression < expression
    (28) expression -> . expression GE expression
    (29) expression -> . expression LE expression
    (30) expression -> . expression NEQS expression
    (31) expression -> . expression OR expression
    (32) expression -> . expression NAND expression
    (33) expression -> . LAMBDA_START LAMBDA expression
    (34) expression -> . LAMBDA_START expression_list LAMBDA expression
    (35) expression -> . STRING
    (36) expression -> . ID dots ID
    (37) expression -> . LOOP expression DO expression
    (38) expression -> . CHAR
    (39) expression -> . FOR expression ; expression ; expression DO expression
    (40) expression -> . ID
    (41) expression -> . ID dots ID ( )
    (42) expression -> . ID dots ID ( expression_list )
    (43) expression -> . WHILE expression DO expression
    (44) expression -> . ID ( )
    (45) expression -> . ID ( expression_list )
    (47) expression -> . [ expression_list ]
    (48) expression -> . ID [ NUMBER ]
    (49) expression -> . ( expression_list )
    (50) expression -> . NOT expression
    (51) expression -> . ID ASSIGN expression
    (52) expression -> . dots ID ASSIGN expression
    (16) dots -> . .
    (17) dots -> . . dots

    -               shift and go to state 2
    STRUCT          shift and go to state 3
    NUMBER          shift and go to state 5
    {               shift and go to state 4
    EXTEND          shift and go to state 6
    LOCAL           shift and go to state 8
    BOOL            shift and go to state 9
    IF              shift and go to state 10
    IMPORT          shift and go to state 11
    FLOAT           shift and go to state 12
    LAMBDA_START    shift and go to state 13
    STRING          shift and go to state 14
    ID              shift and go to state 7
    LOOP            shift and go to state 16
    CHAR            shift and go to state 17
    FOR             shift and go to state 18
    WHILE           shift and go to state 20
    [               shift and go to state 21
    (               shift and go to state 19
    NOT             shift and go to state 22
    .               shift and go to state 23

    expression                     shift and go to state 1
    dots                           shift and go to state 15

state 1

    (0) S' -> expression .
    (2) expression -> expression . + expression
    (3) expression -> expression . - expression
    (4) expression -> expression . * expression
    (5) expression -> expression . / expression
    (23) expression -> expression . AND expression
    (24) expression -> expression . EQ expression
    (25) expression -> expression . = expression
    (26) expression -> expression . > expression
    (27) expression -> expression . < expression
    (28) expression -> expression . GE expression
    (29) expression -> expression . LE expression
    (30) expression -> expression . NEQS expression
    (31) expression -> expression . OR expression
    (32) expression -> expression . NAND expression

    +               shift and go to state 24
    -               shift and go to state 25
    *               shift and go to state 26
    /               shift and go to state 27
    AND             shift and go to state 28
    EQ              shift and go to state 29
    =               shift and go to state 30
    >               shift and go to state 31
    <               shift and go to state 32
    GE              shift and go to state 33
    LE              shift and go to state 34
    NEQS            shift and go to state 35
    OR              shift and go to state 36
    NAND            shift and go to state 37


state 2

    (1) expression -> - . expression
    (1) expression -> . - expression
    (2) expression -> . expression + expression
    (3) expression -> . expression - expression
    (4) expression -> . expression * expression
    (5) expression -> . expression / expression
    (6) expression -> . STRUCT { sequence_struct }
    (9) expression -> . NUMBER
    (10) expression -> . { sequence }
    (11) expression -> . EXTEND ID { sequence_struct }
    (12) expression -> . LOCAL ID ASSIGN expression IN expression
    (13) expression -> . BOOL
    (14) expression -> . IF expression THEN expression
    (15) expression -> . IMPORT ID AS ID
    (20) expression -> . FLOAT
    (21) expression -> . IF expression THEN expression ELSE expression
    (22) expression -> . IMPORT ID
    (23) expression -> . expression AND expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression = expression
    (26) expression -> . expression > expression
    (27) expression -> . expression < expression
    (28) expression -> . expression GE expression
    (29) expression -> . expression LE expression
    (30) expression -> . expression NEQS expression
    (31) expression -> . expression OR expression
    (32) expression -> . expression NAND expression
    (33) expression -> . LAMBDA_START LAMBDA expression
    (34) expression -> . LAMBDA_START expression_list LAMBDA expression
    (35) expression -> . STRING
    (36) expression -> . ID dots ID
    (37) expression -> . LOOP expression DO expression
    (38) expression -> . CHAR
    (39) expression -> . FOR expression ; expression ; expression DO expression
    (40) expression -> . ID
    (41) expression -> . ID dots ID ( )
    (42) expression -> . ID dots ID ( expression_list )
    (43) expression -> . WHILE expression DO expression
    (44) expression -> . ID ( )
    (45) expression -> . ID ( expression_list )
    (47) expression -> . [ expression_list ]
    (48) expression -> . ID [ NUMBER ]
    (49) expression -> . ( expression_list )
    (50) expression -> . NOT expression
    (51) expression -> . ID ASSIGN expression
    (52) expression -> . dots ID ASSIGN expression
    (16) dots -> . .
    (17) dots -> . . dots

    -               shift and go to state 2
    STRUCT          shift and go to state 3
    NUMBER          shift and go to state 5
    {               shift and go to state 4
    EXTEND          shift and go to state 6
    LOCAL           shift and go to state 8
    BOOL            shift and go to state 9
    IF              shift and go to state 10
    IMPORT          shift and go to state 11
    FLOAT           shift and go to state 12
    LAMBDA_START    shift and go to state 13
    STRING          shift and go to state 14
    ID              shift and go to state 7
    LOOP            shift and go to state 16
    CHAR            shift and go to state 17
    FOR             shift and go to state 18
    WHILE           shift and go to state 20
    [               shift and go to state 21
    (               shift and go to state 19
    NOT             shift and go to state 22
    .               shift and go to state 23

    expression                     shift and go to state 38
    dots                           shift and go to state 15

state 3

    (6) expression -> STRUCT . { sequence_struct }

    {               shift and go to state 39


state 4

    (10) expression -> { . sequence }
    (18) sequence -> . expression
    (19) sequence -> . sequence ; expression
    (1) expression -> . - expression
    (2) expression -> . expression + expression
    (3) expression -> . expression - expression
    (4) expression -> . expression * expression
    (5) expression -> . expression / expression
    (6) expression -> . STRUCT { sequence_struct }
    (9) expression -> . NUMBER
    (10) expression -> . { sequence }
    (11) expression -> . EXTEND ID { sequence_struct }
    (12) expression -> . LOCAL ID ASSIGN expression IN expression
    (13) expression -> . BOOL
    (14) expression -> . IF expression THEN expression
    (15) expression -> . IMPORT ID AS ID
    (20) expression -> . FLOAT
    (21) expression -> . IF expression THEN expression ELSE expression
    (22) expression -> . IMPORT ID
    (23) expression -> . expression AND expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression = expression
    (26) expression -> . expression > expression
    (27) expression -> . expression < expression
    (28) expression -> . expression GE expression
    (29) expression -> . expression LE expression
    (30) expression -> . expression NEQS expression
    (31) expression -> . expression OR expression
    (32) expression -> . expression NAND expression
    (33) expression -> . LAMBDA_START LAMBDA expression
    (34) expression -> . LAMBDA_START expression_list LAMBDA expression
    (35) expression -> . STRING
    (36) expression -> . ID dots ID
    (37) expression -> . LOOP expression DO expression
    (38) expression -> . CHAR
    (39) expression -> . FOR expression ; expression ; expression DO expression
    (40) expression -> . ID
    (41) expression -> . ID dots ID ( )
    (42) expression -> . ID dots ID ( expression_list )
    (43) expression -> . WHILE expression DO expression
    (44) expression -> . ID ( )
    (45) expression -> . ID ( expression_list )
    (47) expression -> . [ expression_list ]
    (48) expression -> . ID [ NUMBER ]
    (49) expression -> . ( expression_list )
    (50) expression -> . NOT expression
    (51) expression -> . ID ASSIGN expression
    (52) expression -> . dots ID ASSIGN expression
    (16) dots -> . .
    (17) dots -> . . dots

    -               shift and go to state 2
    STRUCT          shift and go to state 3
    NUMBER          shift and go to state 5
    {               shift and go to state 4
    EXTEND          shift and go to state 6
    LOCAL           shift and go to state 8
    BOOL            shift and go to state 9
    IF              shift and go to state 10
    IMPORT          shift and go to state 11
    FLOAT           shift and go to state 12
    LAMBDA_START    shift and go to state 13
    STRING          shift and go to state 14
    ID              shift and go to state 7
    LOOP            shift and go to state 16
    CHAR            shift and go to state 17
    FOR             shift and go to state 18
    WHILE           shift and go to state 20
    [               shift and go to state 21
    (               shift and go to state 19
    NOT             shift and go to state 22
    .               shift and go to state 23

    sequence                       shift and go to state 40
    expression                     shift and go to state 41
    dots                           shift and go to state 15

state 5

    (9) expression -> NUMBER .

    +               reduce using rule 9 (expression -> NUMBER .)
    -               reduce using rule 9 (expression -> NUMBER .)
    *               reduce using rule 9 (expression -> NUMBER .)
    /               reduce using rule 9 (expression -> NUMBER .)
    AND             reduce using rule 9 (expression -> NUMBER .)
    EQ              reduce using rule 9 (expression -> NUMBER .)
    =               reduce using rule 9 (expression -> NUMBER .)
    >               reduce using rule 9 (expression -> NUMBER .)
    <               reduce using rule 9 (expression -> NUMBER .)
    GE              reduce using rule 9 (expression -> NUMBER .)
    LE              reduce using rule 9 (expression -> NUMBER .)
    NEQS            reduce using rule 9 (expression -> NUMBER .)
    OR              reduce using rule 9 (expression -> NUMBER .)
    NAND            reduce using rule 9 (expression -> NUMBER .)
    $end            reduce using rule 9 (expression -> NUMBER .)
    }               reduce using rule 9 (expression -> NUMBER .)
    ;               reduce using rule 9 (expression -> NUMBER .)
    THEN            reduce using rule 9 (expression -> NUMBER .)
    ,               reduce using rule 9 (expression -> NUMBER .)
    LAMBDA          reduce using rule 9 (expression -> NUMBER .)
    DO              reduce using rule 9 (expression -> NUMBER .)
    )               reduce using rule 9 (expression -> NUMBER .)
    ]               reduce using rule 9 (expression -> NUMBER .)
    IN              reduce using rule 9 (expression -> NUMBER .)
    ELSE            reduce using rule 9 (expression -> NUMBER .)


state 6

    (11) expression -> EXTEND . ID { sequence_struct }

    ID              shift and go to state 42


state 7

    (36) expression -> ID . dots ID
    (40) expression -> ID .
    (41) expression -> ID . dots ID ( )
    (42) expression -> ID . dots ID ( expression_list )
    (44) expression -> ID . ( )
    (45) expression -> ID . ( expression_list )
    (48) expression -> ID . [ NUMBER ]
    (51) expression -> ID . ASSIGN expression
    (16) dots -> . .
    (17) dots -> . . dots

    +               reduce using rule 40 (expression -> ID .)
    -               reduce using rule 40 (expression -> ID .)
    *               reduce using rule 40 (expression -> ID .)
    /               reduce using rule 40 (expression -> ID .)
    AND             reduce using rule 40 (expression -> ID .)
    EQ              reduce using rule 40 (expression -> ID .)
    =               reduce using rule 40 (expression -> ID .)
    >               reduce using rule 40 (expression -> ID .)
    <               reduce using rule 40 (expression -> ID .)
    GE              reduce using rule 40 (expression -> ID .)
    LE              reduce using rule 40 (expression -> ID .)
    NEQS            reduce using rule 40 (expression -> ID .)
    OR              reduce using rule 40 (expression -> ID .)
    NAND            reduce using rule 40 (expression -> ID .)
    $end            reduce using rule 40 (expression -> ID .)
    }               reduce using rule 40 (expression -> ID .)
    ;               reduce using rule 40 (expression -> ID .)
    THEN            reduce using rule 40 (expression -> ID .)
    ,               reduce using rule 40 (expression -> ID .)
    LAMBDA          reduce using rule 40 (expression -> ID .)
    DO              reduce using rule 40 (expression -> ID .)
    )               reduce using rule 40 (expression -> ID .)
    ]               reduce using rule 40 (expression -> ID .)
    IN              reduce using rule 40 (expression -> ID .)
    ELSE            reduce using rule 40 (expression -> ID .)
    (               shift and go to state 44
    [               shift and go to state 45
    ASSIGN          shift and go to state 46
    .               shift and go to state 23

    dots                           shift and go to state 43

state 8

    (12) expression -> LOCAL . ID ASSIGN expression IN expression

    ID              shift and go to state 47


state 9

    (13) expression -> BOOL .

    +               reduce using rule 13 (expression -> BOOL .)
    -               reduce using rule 13 (expression -> BOOL .)
    *               reduce using rule 13 (expression -> BOOL .)
    /               reduce using rule 13 (expression -> BOOL .)
    AND             reduce using rule 13 (expression -> BOOL .)
    EQ              reduce using rule 13 (expression -> BOOL .)
    =               reduce using rule 13 (expression -> BOOL .)
    >               reduce using rule 13 (expression -> BOOL .)
    <               reduce using rule 13 (expression -> BOOL .)
    GE              reduce using rule 13 (expression -> BOOL .)
    LE              reduce using rule 13 (expression -> BOOL .)
    NEQS            reduce using rule 13 (expression -> BOOL .)
    OR              reduce using rule 13 (expression -> BOOL .)
    NAND            reduce using rule 13 (expression -> BOOL .)
    $end            reduce using rule 13 (expression -> BOOL .)
    }               reduce using rule 13 (expression -> BOOL .)
    ;               reduce using rule 13 (expression -> BOOL .)
    THEN            reduce using rule 13 (expression -> BOOL .)
    ,               reduce using rule 13 (expression -> BOOL .)
    LAMBDA          reduce using rule 13 (expression -> BOOL .)
    DO              reduce using rule 13 (expression -> BOOL .)
    )               reduce using rule 13 (expression -> BOOL .)
    ]               reduce using rule 13 (expression -> BOOL .)
    IN              reduce using rule 13 (expression -> BOOL .)
    ELSE            reduce using rule 13 (expression -> BOOL .)


state 10

    (14) expression -> IF . expression THEN expression
    (21) expression -> IF . expression THEN expression ELSE expression
    (1) expression -> . - expression
    (2) expression -> . expression + expression
    (3) expression -> . expression - expression
    (4) expression -> . expression * expression
    (5) expression -> . expression / expression
    (6) expression -> . STRUCT { sequence_struct }
    (9) expression -> . NUMBER
    (10) expression -> . { sequence }
    (11) expression -> . EXTEND ID { sequence_struct }
    (12) expression -> . LOCAL ID ASSIGN expression IN expression
    (13) expression -> . BOOL
    (14) expression -> . IF expression THEN expression
    (15) expression -> . IMPORT ID AS ID
    (20) expression -> . FLOAT
    (21) expression -> . IF expression THEN expression ELSE expression
    (22) expression -> . IMPORT ID
    (23) expression -> . expression AND expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression = expression
    (26) expression -> . expression > expression
    (27) expression -> . expression < expression
    (28) expression -> . expression GE expression
    (29) expression -> . expression LE expression
    (30) expression -> . expression NEQS expression
    (31) expression -> . expression OR expression
    (32) expression -> . expression NAND expression
    (33) expression -> . LAMBDA_START LAMBDA expression
    (34) expression -> . LAMBDA_START expression_list LAMBDA expression
    (35) expression -> . STRING
    (36) expression -> . ID dots ID
    (37) expression -> . LOOP expression DO expression
    (38) expression -> . CHAR
    (39) expression -> . FOR expression ; expression ; expression DO expression
    (40) expression -> . ID
    (41) expression -> . ID dots ID ( )
    (42) expression -> . ID dots ID ( expression_list )
    (43) expression -> . WHILE expression DO expression
    (44) expression -> . ID ( )
    (45) expression -> . ID ( expression_list )
    (47) expression -> . [ expression_list ]
    (48) expression -> . ID [ NUMBER ]
    (49) expression -> . ( expression_list )
    (50) expression -> . NOT expression
    (51) expression -> . ID ASSIGN expression
    (52) expression -> . dots ID ASSIGN expression
    (16) dots -> . .
    (17) dots -> . . dots

    -               shift and go to state 2
    STRUCT          shift and go to state 3
    NUMBER          shift and go to state 5
    {               shift and go to state 4
    EXTEND          shift and go to state 6
    LOCAL           shift and go to state 8
    BOOL            shift and go to state 9
    IF              shift and go to state 10
    IMPORT          shift and go to state 11
    FLOAT           shift and go to state 12
    LAMBDA_START    shift and go to state 13
    STRING          shift and go to state 14
    ID              shift and go to state 7
    LOOP            shift and go to state 16
    CHAR            shift and go to state 17
    FOR             shift and go to state 18
    WHILE           shift and go to state 20
    [               shift and go to state 21
    (               shift and go to state 19
    NOT             shift and go to state 22
    .               shift and go to state 23

    expression                     shift and go to state 48
    dots                           shift and go to state 15

state 11

    (15) expression -> IMPORT . ID AS ID
    (22) expression -> IMPORT . ID

    ID              shift and go to state 49


state 12

    (20) expression -> FLOAT .

    +               reduce using rule 20 (expression -> FLOAT .)
    -               reduce using rule 20 (expression -> FLOAT .)
    *               reduce using rule 20 (expression -> FLOAT .)
    /               reduce using rule 20 (expression -> FLOAT .)
    AND             reduce using rule 20 (expression -> FLOAT .)
    EQ              reduce using rule 20 (expression -> FLOAT .)
    =               reduce using rule 20 (expression -> FLOAT .)
    >               reduce using rule 20 (expression -> FLOAT .)
    <               reduce using rule 20 (expression -> FLOAT .)
    GE              reduce using rule 20 (expression -> FLOAT .)
    LE              reduce using rule 20 (expression -> FLOAT .)
    NEQS            reduce using rule 20 (expression -> FLOAT .)
    OR              reduce using rule 20 (expression -> FLOAT .)
    NAND            reduce using rule 20 (expression -> FLOAT .)
    $end            reduce using rule 20 (expression -> FLOAT .)
    }               reduce using rule 20 (expression -> FLOAT .)
    ;               reduce using rule 20 (expression -> FLOAT .)
    THEN            reduce using rule 20 (expression -> FLOAT .)
    ,               reduce using rule 20 (expression -> FLOAT .)
    LAMBDA          reduce using rule 20 (expression -> FLOAT .)
    DO              reduce using rule 20 (expression -> FLOAT .)
    )               reduce using rule 20 (expression -> FLOAT .)
    ]               reduce using rule 20 (expression -> FLOAT .)
    IN              reduce using rule 20 (expression -> FLOAT .)
    ELSE            reduce using rule 20 (expression -> FLOAT .)


state 13

    (33) expression -> LAMBDA_START . LAMBDA expression
    (34) expression -> LAMBDA_START . expression_list LAMBDA expression
    (7) expression_list -> . expression , expression_list
    (8) expression_list -> . expression
    (1) expression -> . - expression
    (2) expression -> . expression + expression
    (3) expression -> . expression - expression
    (4) expression -> . expression * expression
    (5) expression -> . expression / expression
    (6) expression -> . STRUCT { sequence_struct }
    (9) expression -> . NUMBER
    (10) expression -> . { sequence }
    (11) expression -> . EXTEND ID { sequence_struct }
    (12) expression -> . LOCAL ID ASSIGN expression IN expression
    (13) expression -> . BOOL
    (14) expression -> . IF expression THEN expression
    (15) expression -> . IMPORT ID AS ID
    (20) expression -> . FLOAT
    (21) expression -> . IF expression THEN expression ELSE expression
    (22) expression -> . IMPORT ID
    (23) expression -> . expression AND expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression = expression
    (26) expression -> . expression > expression
    (27) expression -> . expression < expression
    (28) expression -> . expression GE expression
    (29) expression -> . expression LE expression
    (30) expression -> . expression NEQS expression
    (31) expression -> . expression OR expression
    (32) expression -> . expression NAND expression
    (33) expression -> . LAMBDA_START LAMBDA expression
    (34) expression -> . LAMBDA_START expression_list LAMBDA expression
    (35) expression -> . STRING
    (36) expression -> . ID dots ID
    (37) expression -> . LOOP expression DO expression
    (38) expression -> . CHAR
    (39) expression -> . FOR expression ; expression ; expression DO expression
    (40) expression -> . ID
    (41) expression -> . ID dots ID ( )
    (42) expression -> . ID dots ID ( expression_list )
    (43) expression -> . WHILE expression DO expression
    (44) expression -> . ID ( )
    (45) expression -> . ID ( expression_list )
    (47) expression -> . [ expression_list ]
    (48) expression -> . ID [ NUMBER ]
    (49) expression -> . ( expression_list )
    (50) expression -> . NOT expression
    (51) expression -> . ID ASSIGN expression
    (52) expression -> . dots ID ASSIGN expression
    (16) dots -> . .
    (17) dots -> . . dots

    LAMBDA          shift and go to state 50
    -               shift and go to state 2
    STRUCT          shift and go to state 3
    NUMBER          shift and go to state 5
    {               shift and go to state 4
    EXTEND          shift and go to state 6
    LOCAL           shift and go to state 8
    BOOL            shift and go to state 9
    IF              shift and go to state 10
    IMPORT          shift and go to state 11
    FLOAT           shift and go to state 12
    LAMBDA_START    shift and go to state 13
    STRING          shift and go to state 14
    ID              shift and go to state 7
    LOOP            shift and go to state 16
    CHAR            shift and go to state 17
    FOR             shift and go to state 18
    WHILE           shift and go to state 20
    [               shift and go to state 21
    (               shift and go to state 19
    NOT             shift and go to state 22
    .               shift and go to state 23

    expression                     shift and go to state 51
    expression_list                shift and go to state 52
    dots                           shift and go to state 15

state 14

    (35) expression -> STRING .

    +               reduce using rule 35 (expression -> STRING .)
    -               reduce using rule 35 (expression -> STRING .)
    *               reduce using rule 35 (expression -> STRING .)
    /               reduce using rule 35 (expression -> STRING .)
    AND             reduce using rule 35 (expression -> STRING .)
    EQ              reduce using rule 35 (expression -> STRING .)
    =               reduce using rule 35 (expression -> STRING .)
    >               reduce using rule 35 (expression -> STRING .)
    <               reduce using rule 35 (expression -> STRING .)
    GE              reduce using rule 35 (expression -> STRING .)
    LE              reduce using rule 35 (expression -> STRING .)
    NEQS            reduce using rule 35 (expression -> STRING .)
    OR              reduce using rule 35 (expression -> STRING .)
    NAND            reduce using rule 35 (expression -> STRING .)
    $end            reduce using rule 35 (expression -> STRING .)
    }               reduce using rule 35 (expression -> STRING .)
    ;               reduce using rule 35 (expression -> STRING .)
    THEN            reduce using rule 35 (expression -> STRING .)
    ,               reduce using rule 35 (expression -> STRING .)
    LAMBDA          reduce using rule 35 (expression -> STRING .)
    DO              reduce using rule 35 (expression -> STRING .)
    )               reduce using rule 35 (expression -> STRING .)
    ]               reduce using rule 35 (expression -> STRING .)
    IN              reduce using rule 35 (expression -> STRING .)
    ELSE            reduce using rule 35 (expression -> STRING .)


state 15

    (52) expression -> dots . ID ASSIGN expression

    ID              shift and go to state 53


state 16

    (37) expression -> LOOP . expression DO expression
    (1) expression -> . - expression
    (2) expression -> . expression + expression
    (3) expression -> . expression - expression
    (4) expression -> . expression * expression
    (5) expression -> . expression / expression
    (6) expression -> . STRUCT { sequence_struct }
    (9) expression -> . NUMBER
    (10) expression -> . { sequence }
    (11) expression -> . EXTEND ID { sequence_struct }
    (12) expression -> . LOCAL ID ASSIGN expression IN expression
    (13) expression -> . BOOL
    (14) expression -> . IF expression THEN expression
    (15) expression -> . IMPORT ID AS ID
    (20) expression -> . FLOAT
    (21) expression -> . IF expression THEN expression ELSE expression
    (22) expression -> . IMPORT ID
    (23) expression -> . expression AND expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression = expression
    (26) expression -> . expression > expression
    (27) expression -> . expression < expression
    (28) expression -> . expression GE expression
    (29) expression -> . expression LE expression
    (30) expression -> . expression NEQS expression
    (31) expression -> . expression OR expression
    (32) expression -> . expression NAND expression
    (33) expression -> . LAMBDA_START LAMBDA expression
    (34) expression -> . LAMBDA_START expression_list LAMBDA expression
    (35) expression -> . STRING
    (36) expression -> . ID dots ID
    (37) expression -> . LOOP expression DO expression
    (38) expression -> . CHAR
    (39) expression -> . FOR expression ; expression ; expression DO expression
    (40) expression -> . ID
    (41) expression -> . ID dots ID ( )
    (42) expression -> . ID dots ID ( expression_list )
    (43) expression -> . WHILE expression DO expression
    (44) expression -> . ID ( )
    (45) expression -> . ID ( expression_list )
    (47) expression -> . [ expression_list ]
    (48) expression -> . ID [ NUMBER ]
    (49) expression -> . ( expression_list )
    (50) expression -> . NOT expression
    (51) expression -> . ID ASSIGN expression
    (52) expression -> . dots ID ASSIGN expression
    (16) dots -> . .
    (17) dots -> . . dots

    -               shift and go to state 2
    STRUCT          shift and go to state 3
    NUMBER          shift and go to state 5
    {               shift and go to state 4
    EXTEND          shift and go to state 6
    LOCAL           shift and go to state 8
    BOOL            shift and go to state 9
    IF              shift and go to state 10
    IMPORT          shift and go to state 11
    FLOAT           shift and go to state 12
    LAMBDA_START    shift and go to state 13
    STRING          shift and go to state 14
    ID              shift and go to state 7
    LOOP            shift and go to state 16
    CHAR            shift and go to state 17
    FOR             shift and go to state 18
    WHILE           shift and go to state 20
    [               shift and go to state 21
    (               shift and go to state 19
    NOT             shift and go to state 22
    .               shift and go to state 23

    expression                     shift and go to state 54
    dots                           shift and go to state 15

state 17

    (38) expression -> CHAR .

    +               reduce using rule 38 (expression -> CHAR .)
    -               reduce using rule 38 (expression -> CHAR .)
    *               reduce using rule 38 (expression -> CHAR .)
    /               reduce using rule 38 (expression -> CHAR .)
    AND             reduce using rule 38 (expression -> CHAR .)
    EQ              reduce using rule 38 (expression -> CHAR .)
    =               reduce using rule 38 (expression -> CHAR .)
    >               reduce using rule 38 (expression -> CHAR .)
    <               reduce using rule 38 (expression -> CHAR .)
    GE              reduce using rule 38 (expression -> CHAR .)
    LE              reduce using rule 38 (expression -> CHAR .)
    NEQS            reduce using rule 38 (expression -> CHAR .)
    OR              reduce using rule 38 (expression -> CHAR .)
    NAND            reduce using rule 38 (expression -> CHAR .)
    $end            reduce using rule 38 (expression -> CHAR .)
    }               reduce using rule 38 (expression -> CHAR .)
    ;               reduce using rule 38 (expression -> CHAR .)
    THEN            reduce using rule 38 (expression -> CHAR .)
    ,               reduce using rule 38 (expression -> CHAR .)
    LAMBDA          reduce using rule 38 (expression -> CHAR .)
    DO              reduce using rule 38 (expression -> CHAR .)
    )               reduce using rule 38 (expression -> CHAR .)
    ]               reduce using rule 38 (expression -> CHAR .)
    IN              reduce using rule 38 (expression -> CHAR .)
    ELSE            reduce using rule 38 (expression -> CHAR .)


state 18

    (39) expression -> FOR . expression ; expression ; expression DO expression
    (1) expression -> . - expression
    (2) expression -> . expression + expression
    (3) expression -> . expression - expression
    (4) expression -> . expression * expression
    (5) expression -> . expression / expression
    (6) expression -> . STRUCT { sequence_struct }
    (9) expression -> . NUMBER
    (10) expression -> . { sequence }
    (11) expression -> . EXTEND ID { sequence_struct }
    (12) expression -> . LOCAL ID ASSIGN expression IN expression
    (13) expression -> . BOOL
    (14) expression -> . IF expression THEN expression
    (15) expression -> . IMPORT ID AS ID
    (20) expression -> . FLOAT
    (21) expression -> . IF expression THEN expression ELSE expression
    (22) expression -> . IMPORT ID
    (23) expression -> . expression AND expression
    (24) expression -> . expression EQ expression
    (25) expression -> . expression = expression
    (26) expression -> . expression > expression
    (27) expression -> . expression < expression
    (28) expression -> . expression GE expression
    (29) expression -> . expression LE expression
    (30) expression -> . expression NEQS expression
    (31) expression -> . expression OR expression
    (32) expression -> . expression NAND expression
    (33) expression -> . LAMBDA_START LAMBDA expression
    (34) expression -> . LAMBDA_START expression_list LAMBDA expression
    (35) expression -> . STRING
    (36) expression -> . ID dots ID
    (37) expression -> . LOOP expression DO expression
    (38) expression -> . CHAR
    (39) expression -> . FOR expression ; expression ; expression DO expression
    (40) expression -> . ID
    (41) expression -> . ID dots ID ( )
    (42) expression -> . ID dots ID ( expression_list )
    (43) expression -> . WHILE expression DO expression
    (44) expression -> . ID ( )
    (45) expression -> . ID ( expression_list )
    (47) expression -> . [ expression_list ]
    (48) expression -> . ID [ NUMBER ]
    (49) expression -> . ( expression_list )
    (50) expression -> . NOT expression
    (51) expression -> . ID ASSIGN expression
    (52) expression -> . dots ID ASSIGN expression
    (16) dots -> . .
    (17) dots -> . . dots
